# pdf-word-extraction

./: .gitignore  README.md  pdf_word_extraction.py  pyproject.toml  requirements.txt
src/pdf_word_extraction/: __init__.py  cli.py  pathio.py  pdf_word_extraction.py  texter.py
