[project]
name = "pdf-word-extraction"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Nan Xiao", email = "hello@nanx.me" }
]
dependencies = [
    "ftfy==6.2.0",
    "pypdf==4.2.0",
    "polars>=0.20.31",
    "spacy==3.7.5",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1.tar.gz",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.script]
protraitme = "pdf_word_extraction:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pdf_word_extraction"]
